# IPC-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
else/: clear  pipe  remove.cpp  scan  scan.cpp
include/: Scanner.h  pipe.h  room.h  socket.h  utils.h
planing/: diagram.txt
src/: Scanner.cpp  main.cpp  osh.cpp  pipe.cpp  room.cpp  socket.cpp  utils.cpp
